style: fix contrast color a11y

--- a/src/style.sass
+++ b/src/style.sass
@@ -56,7 +56,7 @@
   --color-primary: #1C75DB
   --color-secondary: #ED297A
   --color-border: #3f4554
-  --color-text-light: #747d91
+  --color-text-light: #869AC6
   --color-heading: #1a202c
   --color-heading-black: var(--color-black)
   --color-accent: #d1dce5
@@ -91,6 +91,7 @@ body
     --background-color: var(--color-white)
     --main-text-color: var(--color-black)
     --color-border: var(--color-gray)
+    --color-text-light: #465272
 
 footer 
   padding: var(--spacing-6) var(--spacing-0)
